# llm-from-scratch

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements-docker.txt  requirements.txt
llm/: evaluation.py  gpt.py  gpt_download.py  instruction-finetune.py  llm.py  load_weights.py  mah.py  model.py  run_rag.py  tokens.py  training.py
llm/instruction/: dataloader.py  evaluate.py  instruction_data.py
llm/rag/: document_loader.py  model_engine.py
